force-app/main/default/objects/Meeting_Recap_Change__c/Meeting_Recap_Change__c.object-meta.xml
<CustomObject>
    <description
  >Audit record of a CRM field value changed when a meeting recap was committed, including the previous value, the new value, and what Agentforce originally suggested.</description>
    <label>Recap Field Change</label>
    <nameField>
        <displayFormat>RFC-{00000}</displayFormat>
        <label>Change Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recap Field Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>