force-app/main/default/objects/Meeting_Recap_Change__c/fields/AI_Overridden__c.field-meta.xml
<CustomField>
    <fullName>AI_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AI Overridden</label>
    <type>Checkbox</type>
</CustomField>