force-app/main/default/objects/Meeting_Recap_Change__c/fields/AI_Suggested_Value__c.field-meta.xml
<CustomField>
    <fullName>AI_Suggested_Value__c</fullName>
    <label>AI Suggested Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>