force-app/main/default/objects/Meeting_Recap_Change__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>