force-app/main/default/objects/Meeting_Recap_Change__c/fields/Meeting_Recap__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Recap__c</fullName>
    <label>Meeting Recap</label>
    <referenceTo>Meeting_Recap__c</referenceTo>
    <relationshipLabel>Field Changes</relationshipLabel>
    <relationshipName>Field_Changes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>