force-app/main/default/objects/Meeting_Recap_Change__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>