force-app/main/default/objects/Meeting_Recap_Change__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>