force-app/main/default/objects/Meeting_Recap_Change__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>Target Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>